<resources>
    <string name="app_name">fred projects</string>
    <string name="activity_second_lw" translatable="false">SecondLW</string>
    <string name="first_number">first number</string>
    <string name="second_number">second number</string>
    <string name="result">Show the result of solving the task</string>
    <string name="error">Error: Values are null or incorrect</string>
    <string name="inequality">the inequality has no solutions</string>
    <string name="photo">Photo</string>
    <string name="add">Add record</string>
    <string name="update">Update record</string>
    <string name="delete">Delete record</string>
    <string name="sort">Sort records</string>
    <string name="search">Search for records</string>
    <string name="mainList" translatable="false">MainList</string>
    <string name="PW">Practical Work</string>
    <string name="Student">Student</string>
    <string name="Variant">Variant</string>
    <string name="LVL">LVL</string>
    <string name="Date">Date</string>
    <string name="Mark">Mark</string>
    <string name="enterPW">Enter the name of the practical work</string>
    <string name="enterStudent">Enter the student\'s name and surname</string>
    <string name="enterVariant">Enter the number of the practical work variant</string>
    <string name="enterLVL">Enter the number of the practical work level</string>
    <string name="enterDate">Enter the completion date (dd.mm.yyyy)</string>
    <string name="enterMark">Enter the mark of the practical work</string>
    <string name="incorrectDate">Incorrect data about date</string>
    <string name="menu">Menu</string>
    <string name="record_deleted">The record has been deleted</string>
    <string name="CRUD">CRUD operations with SQLite</string>
    <string name="enter_number">Enter the number</string>
    <string name="cancel">Cancel</string>
    <string name="calculations_begun">The calculations have begun</string>
    <string name="calculations_canceled">Calculations canceled</string>
    <string name="enter_expression">Enter the expression</string>
    <string name="description">The answers that were received during the calculations</string>
    <string name="message_header">Calculations</string>
    <string name="service_error">Error: the service is not responding</string>
    <string name="drawer_header">Practical works</string>
    <string name="inequality_task">Solving the Inequality</string>
    <string name="incorrectPW">Incorrect data about practical work</string>
    <string name="incorrectStudent">Incorrect data about student</string>
    <string name="incorrectVariant">Incorrect data about variant</string>
    <string name="incorrectLVL">Incorrect data about level</string>
    <string name="incorrectMark">Incorrect data about mark</string>
    <string name="ascending_sort">Ascending</string>
    <string name="descending_sort">Descending</string>
    <string name="activity_test_service" translatable="false">TestService</string>
    <string name="jump">Jump</string>
    <string name="go_back">Go back</string>
    <string name="take_picture">Take a picture</string>
    <string name="activity_sensor_and_animation" translatable="false">SensorAndAnimation</string>
    <string name="save">Save</string>
    <string name="count">Count of jumps</string>
    <string name="math_service">To micro-service for advanced math</string>
    <string name="wait">Wait for the result</string>
    <string name="result_is">The result of the solving task is</string>
    <string name="anime_quotes">To restful API serving anime quotes</string>
    <string name="aq_info">Default rate limit is 100 requests per hour.</string>
    <string name="anime">anime</string>
    <string name="character">character</string>
    <string name="quote">quote</string>
    <string name="astronomy">To Open Astronomy Catalog API</string>
    <string name="enter_ra">Enter the R. A. value</string>
    <string name="enter_dec">Enter the declination</string>
    <string name="enter_radius">Enter the radius</string>
    <string name="get_info">Get Info</string>
    <string name="no_internet">there is no internet connection</string>
    <string name="something_wrong">Something\'s wrong</string>
</resources>